# test-repo

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
src/: calculator.py  utils.py  validator.py
tests/: test_calculator.py  test_utils.py  test_validator.py
